syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.send.grpc_demo";
option java_outer_classname = "HelloProto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
